# jiujitsu

./: .gitignore  README.md  bpFileSystem.py  bpInterpreter.py  bpInterpreterBase.py  bpPrimitives.py  cli.py  example_state.json  functions.py  interpreter.py  jInterpreter.py  jLexer.py  jNode.py  jParser.py  jRecord.py  jToken.py  main.py  requirements.txt  run.py  setup.cfg  setup.py  test copy.sh  test.sh  testing.json  testing.sh  testing_exclusive_truth.json  the-dream.sh  this-kills-bashlex.sh  tinyCompiler.py
.github/workflows/: python-publish.yml
jiujitsu/: bpInterpreter.py  bpInterpreterBase.py  bpPrimitives.py  jInterpreter.py  jRecord.py
jiujitsu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jiujitsu/test/: test_bpInterpreterBase.py  test_bpPrimitives.py  test_jInterpreter.py  test_jParser.py
judo/: parser.py
scripts/: demo.sh
test/: test_bpInterpreterBase.py  test_bpPrimitives.py  test_jInterpreter.py  test_jLexer.py  test_jParser.py
v1/: interpreter.py  main.py  testing_output.py
