[metadata]
name = jiujitsu
version = 0.3
author = Spencer Stingley
description = A custom bash interpreter for malware execution
long_description = A custom bash interpreter for malware execution
url = https://github.com/BlankCanvasStudio/jiujitsu
keywords = bash, parsing, interpreter, analysis, malware
python_requires = >=3.6
classifiers =
        Programming Language :: Python :: 3
        Operating System :: OS Independent
install_requires = [ bashlex, bashparser ]
test = 
    nose2
[options.entry_points]
console_scripts =
    jj = jiujitsu.jInterpreter:main
